welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:28: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime36.Diagonal'
override def run() {
             ^